--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,14 @@
-Tidy Tuesday - Bike & Walk Commutes
-================
-Jamie Hargreaves
+---
+title: "Tidy Tuesday - Bike & Walk Commutes"
+author: "Jamie Hargreaves"
+output: rmarkdown::github_document
+---
 
-``` r
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r fig.retina = 2, fig.align = 'center', message = FALSE, warning = FALSE, fig.width = 12, fig.height = 8}
 library(tidyverse)
 library(ggridges)
 library(hrbrthemes)
@@ -54,5 +60,3 @@ plots <- map(
 # plot each state region
 do.call(grid.arrange, plots)
 ```
-
-<img src="README_files/figure-gfm/unnamed-chunk-1-1.png" width="1152" style="display: block; margin: auto;" />
